# farm_life

./: .tool-versions  README.md  main.py  pyproject.toml
.cursor/rules/: function-naming.md  test-rule.mdc
data/: test_animals.csv
src/: data_loader.py
tests/: test_data_loader.py
