[project]
name = "farm-life"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "go-task-bin>=3.43.3",
    "google-cloud-bigquery>=3.31.0",
    "pandas>=2.2.3",
    "postgres>=4.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
